Fixed scroll on mobile
* Added position: relative into sections

--- a/src/components/atoms/SectionContainer/style.module.css
+++ b/src/components/atoms/SectionContainer/style.module.css
@@ -15,6 +15,8 @@
   overflow-x: hidden;
   scroll-snap-stop: always;
 	scroll-padding: 0;
+
+	position: relative;
 }
 
 @media (orientation: landscape)
